# HelloCV

./: C++ ⽂本加密解密⼯具(第二周).md  CMake.md  CMakeCache.txt  CMakeLists.txt  Docker.md  Git版本控制.md  Makefile  OpenCV.md  OpenCV对视频的处理.md  README.md  README2.md  TrafficLight  cmake_install.cmake  compile_commands.json  linux系统能力.md  result.avi  实践任务.md
.cmake/api/v1/reply/: cache-v2-e42bc241690e9f361806.json  index-2025-10-26T08-58-17-0059.json
crypt/: crypto.cpp  filehandler.cpp  main.cpp  menu.cpp
include/: crypto.h  filehandler.h  menu.h
traffic/: test.cpp
